objects/vlocity_cmt__AssetPricingAdjustment__c.object
<CustomObject>
    <description>DEPRECATED. Use Account Pricing.</description>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Asset Pricing Adjustments</relationshipLabel>
        <relationshipName>AssetPricingAdjustments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetPricingAdjustmentReferenceId__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Asset Pricing Adjustment Reference ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>Asset Pricing Adjustments</relationshipLabel>
        <relationshipName>AssetPricingAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Provisioning Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <description>DEPRECATED. AssetPricingAdjustment__c is replaced by AccountPriceAdjustment__c.</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asset Pricing Adjustment</label>
    <nameField>
        <label>Pricing Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset Pricing Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>